<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Dagger2Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_home">首页</string>
    <string name="title_todo">常用清单</string>
    <string name="shopping_cart">购物车</string>

    <string name="sum_money">¥%1$s</string>

    <string name="tv_about">关于</string>

    <string name="finish">完成</string>
    <string name="buy_again">再次购买</string>
    <string name="receipt">确认收货</string>
    <string name="to_pay">去支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="evaluate">评价</string>

    <string name="completed">已完成</string>
    <string name="confirm_pay">确认支付</string>

    <string name="need_pay">需支付 ¥%1$s</string>

    <string name="commodity_sum">共%1$d件商品</string>
    <string name="commodity_deposit">（含押金¥%1$s元）</string>

    <string name="interface_address">接口地址:</string>

    <plurals name="show_dev_countdown" formatted="false" msgid="7201398282729229649">
        <item quantity="other">现在只需再执行 <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> 步操作即可进入开发者模式。</item>
        <item quantity="one">现在只需再执行 <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> 步操作即可进入开发者模式。</item>
    </plurals>

    <string name="show_dev_on">"您现在处于开发者模式！"</string>
    <string name="show_dev_already">"您已处于开发者模式，无需进行此操作。"</string>

    <array name="server_url">
        <item>http://api.front.jinyoufarm.cn/api/</item>
        <item>http://api.front.jinyoufarm.com/api/</item>
    </array>
</resources>
